cmake_minimum_required(VERSION 3.31)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        lab9.cpp
        lab9.h
        lab1.cpp
        lab1.h
        lab2.cpp
        lab2.h
        lab3.cpp
        lab3.h
        lab4.cpp
        lab4.h
        lab5.cpp
        lab5.h
        lab6.cpp
        lab6.h
        lab7.cpp
        lab7.h)
